chore: configure wordbase URL in environment variables

--- a/.env.example
+++ b/.env.example
@@ -64,5 +64,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+WORDBASE_URL=https://www.opus.ee/lemmad2013.txt
+
 WWWGROUP=1000
 WWWUSER=1000
