--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.4",
+        "darkaonline/l5-swagger": "^9.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "zircote/swagger-php": "^5.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
