--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -6,6 +6,7 @@
         "lib": ["ES2020", "DOM", "DOM.Iterable"],
         "module": "ESNext",
         "skipLibCheck": true,
+        "baseUrl": "src",
 
         /* Bundler mode */
         "moduleResolution": "bundler",
@@ -23,7 +24,7 @@
         "noFallthroughCasesInSwitch": true,
         "noUncheckedSideEffectImports": true,
         "paths": {
-            "@/*": ["src/*"]
+            "@/*": ["*"]
         }
     },
     "include": ["src"]
